--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     <!-- Mi hoja de estilo CSS -->
     <link rel="stylesheet" href="assets/css/miEstilo.css">
     <title>Viajes Chile</title>
-    <link rel="shortcut icon" href="assets/img/World Map.png" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/img/viajes.svg" type="image/x-icon">
 </head>
 
 <body>
     <!-- Barra de navegacion -->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
+    <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container">
             <a class="navbar-brand" href="#">
                 <img src="assets/img/viajes.svg" alt="Logo">
