Se crea seccion ¿quienes somos?, terminada, aunque hay que ver bien el tema del responsive

--- a/index.html
+++ b/index.html
@@ -53,31 +53,106 @@
     <header>
         <div id="carouselPrincipal" class="carousel slide">
             <div class="carousel-indicators">
-              <button type="button" data-bs-target="#carouselPrincipal" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-              <button type="button" data-bs-target="#carouselPrincipal" data-bs-slide-to="1" aria-label="Slide 2"></button>
-              <button type="button" data-bs-target="#carouselPrincipal" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                <button type="button" data-bs-target="#carouselPrincipal" data-bs-slide-to="0" class="active"
+                    aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselPrincipal" data-bs-slide-to="1"
+                    aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselPrincipal" data-bs-slide-to="2"
+                    aria-label="Slide 3"></button>
             </div>
             <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="assets/img/carousel1.jpg" class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="assets/img/carousel2.jpg" class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="assets/img/carousel3.jpg" class="d-block w-100" alt="...">
-              </div>
+                <div class="carousel-item active">
+                    <img src="assets/img/carousel1.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="assets/img/carousel2.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="assets/img/carousel3.jpg" class="d-block w-100" alt="...">
+                </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselPrincipal" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselPrincipal"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
             </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselPrincipal" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselPrincipal"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
             </button>
-          </div>
+        </div>
     </header>
+
+    <main>
+        <!-- ¿quienes somos? -->
+        <section>
+            <div class="container">
+                <div class="py-5">
+                    <h1 class="titulos text-center">¿quienes somos?</h1>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-4 col-sm-12 py-3">
+                        <div class="encabezado">
+                            <i class="fa-solid fa-plane"></i>
+                        </div>
+                        <div class="colorLetras">
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa officia rerum ad dicta
+                                sint fuga numquam, voluptas facilis blanditiis maxime beatae iusto ipsa odio ullam
+                                repellat nam fugit explicabo veniam?
+                                Vero, iusto quia rerum amet fuga voluptatum laboriosam, aliquid doloribus iste nesciunt,
+                                asperiores ab. Amet odit molestias ipsa sit non quisquam aspernatur, vitae consequuntur
+                                exercitationem, corporis reiciendis expedita sint eaque.
+                                Quidem eveniet atque dolorum ipsam at nisi voluptas tempora culpa assumenda, aut
+                                voluptates incidunt illo cumque quis natus consequuntur nemo necessitatibus? Sunt amet
+                                ab enim officia vitae velit! Obcaecati, maxime.</p>
+                        </div>
+                    </div>
+                    <div class="col-md-4 col-sm-12 py-3">
+                        <div class="colorLetras">
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa officia rerum ad dicta
+                                sint fuga numquam, voluptas facilis blanditiis maxime beatae iusto ipsa odio ullam
+                                repellat nam fugit explicabo veniam?
+                                Vero, iusto quia rerum amet fuga voluptatum laboriosam, aliquid doloribus iste nesciunt,
+                                asperiores ab. Amet odit molestias ipsa sit non quisquam aspernatur, vitae consequuntur
+                                exercitationem, corporis reiciendis expedita sint eaque.
+                                Quidem eveniet atque dolorum ipsam at nisi voluptas tempora culpa assumenda, aut
+                                voluptates incidunt illo cumque quis natus consequuntur nemo necessitatibus? Sunt amet
+                                ab enim officia vitae velit! Obcaecati, maxime.</p>
+                        </div>
+                        <div class="encabezado">
+                            <i class="fa-solid fa-mountain"></i>
+                        </div>
+                    </div>
+                    <div class="col-md-4 col-sm-12 py-3">
+                        <div class="encabezado">
+                            <i class="fa-solid fa-route"></i>
+                        </div>
+                        <div class="colorLetras">
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa officia rerum ad dicta
+                                sint fuga numquam, voluptas facilis blanditiis maxime beatae iusto ipsa odio ullam
+                                repellat nam fugit explicabo veniam?
+                                Vero, iusto quia rerum amet fuga voluptatum laboriosam, aliquid doloribus iste nesciunt,
+                                asperiores ab. Amet odit molestias ipsa sit non quisquam aspernatur, vitae consequuntur
+                                exercitationem, corporis reiciendis expedita sint eaque.
+                                Quidem eveniet atque dolorum ipsam at nisi voluptas tempora culpa assumenda, aut
+                                voluptates incidunt illo cumque quis natus consequuntur nemo necessitatibus? Sunt amet
+                                ab enim officia vitae velit! Obcaecati, maxime.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Destacados -->
+        <article>
+
+        </article>
+    </main>
 
     <!-- JS Bootstrap v5.3.3 -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
