Se crea seccion de destacados, ahi se debe corregir el tamaño de las imagenes ademas de ver el tema de responsividad. Se crea el formulario que quedo casi OK, hay que cambiar el color del boton. y por ultimo se creo el footer al cual le falta ajustar el tamaño.

--- a/index.html
+++ b/index.html
@@ -150,10 +150,103 @@
 
         <!-- Destacados -->
         <article>
-
+            <div class="container">
+                <div class="py-5">
+                    <h1 class="titulos text-center">destacados</h1>
+                </div>
+                <div class="row">
+                    <div class="col-md-3 col-sm-12 my-3">
+                        <div class="card" style="width: 19rem;">
+                            <img src="assets/img/card1.jpg" alt="img1" class="card-img-top imgTarjetas">
+                        </div>
+                        <div class="card-body">
+                            <p class="card-text colorLetras fondoCard p-3">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe veritatis dicta, quas
+                                voluptate vel facilis! Veniam placeat consequuntur omnis, quis vel enim odit provident
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-md-3 col-sm-12 my-3">
+                        <div class="card" style="width: 19rem;">
+                            <img src="assets/img/card2.jpg" alt="img1" class="card-img-top imgTarjetas">
+                        </div>
+                        <div class="card-body">
+                            <p class="card-text colorLetras fondoCard p-3">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe veritatis dicta, quas
+                                voluptate vel facilis! Veniam placeat consequuntur omnis, quis vel enim odit provident
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-md-3 col-sm-12 my-3">
+                        <div class="card" style="width: 19rem;">
+                            <img src="assets/img/card3.jpg" alt="img1" class="card-img-top imgTarjetas">
+                        </div>
+                        <div class="card-body">
+                            <p class="card-text colorLetras fondoCard p-3">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe veritatis dicta, quas
+                                voluptate vel facilis! Veniam placeat consequuntur omnis, quis vel enim odit provident
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-md-3 col-sm-12 my-3">
+                        <div class="card" style="width: 18rem;">
+                            <img src="assets/img/card4.jpg" alt="img1" class="card-img-top imgTarjetas">
+                        </div>
+                        <div class="card-body">
+                            <p class="card-text colorLetras fondoCard p-3">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe veritatis dicta, quas
+                                voluptate vel facilis! Veniam placeat consequuntur omnis, quis vel enim odit provident
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </article>
+
+        <!-- formulario -->
+        <div class="container pb-5"> 
+            <div class="py-5">
+                <h1 class="titulos text-center">Contactanos</h1>
+            </div>
+            <form action="">
+                <div class="mb-3">
+                    <label for="" class="form-label colorLetras">Nombre:</label>
+                    <input type="text" class="form-control" id="">
+                </div>
+                <div class="mb-3">
+                    <label for="" class="form-label colorLetras">Asunto:</label>
+                    <input type="text" class="form-control" id="">
+                </div>
+                <div class="mb-3">
+                    <label for="" class="form-label colorLetras">Mensaje:</label>
+                    <textarea name="" id="" class="form-control" cols="50" rows="10"></textarea>
+                </div>
+                <button type="submit" class="btn btn-info">Submit</button>
+            </form>
+        </div>
     </main>
 
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-6">
+                    <div>
+                        <p class="titulos m-0">viajes Chile</p>
+                    </div>
+                </div>
+                <div class="col-6 text-end position-absolute">
+                    <div>
+                        <i class="fa-brands fa-github mx-2"></i>
+                        <i class="fa-brands fa-linkedin mx-2"></i>
+                        <i class="fa-brands fa-twitter mx-2"></i>
+                        <i class="fa-brands fa-facebook mx-2"></i>
+                    </div>
+                </div>
+            </div>
+
+
+        </div>
+    </footer>
     <!-- JS Bootstrap v5.3.3 -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
