--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <script src="https://kit.fontawesome.com/9863f7154c.js" crossorigin="anonymous"></script>
 
     <!-- Mi hoja de estilo CSS -->
-    <link rel="stylesheet" href="assets/css/miEstilo.css">
+    <link rel="stylesheet" href="./assets/css/miEstilo.css">
     <title>Viajes Chile</title>
-    <link rel="shortcut icon" href="assets/img/viajes.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/img/viajes.svg" type="image/x-icon">
 </head>
 
 <body>
@@ -23,7 +23,7 @@
     <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="assets/img/viajes.svg" alt="Logo">
+                <img src="./assets/img/viajes.svg" alt="Logo">
                 Viajes Chile
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -62,13 +62,13 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="assets/img/carousel1.jpg" class="d-block w-100" alt="...">
+                    <img src="./assets/img/carousel1.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="assets/img/carousel2.jpg" class="d-block w-100" alt="...">
+                    <img src="./assets/img/carousel2.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="assets/img/carousel3.jpg" class="d-block w-100" alt="...">
+                    <img src="./assets/img/carousel3.jpg" class="d-block w-100" alt="...">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselPrincipal"
@@ -84,7 +84,7 @@
         </div>
     </header>
 
-    <main>
+    <main id="principal">
         <!-- ¿quienes somos? -->
         <section id="quienes">
             <div class="container d-none d-md-block">
@@ -157,7 +157,7 @@
                 <div class="row">
                     <div class="col-md-3 col-sm-12 my-3">
                         <div class="card fondoCard" style="width: 18rem;">
-                            <img src="assets/img/card1.jpg" alt="img1" class="card-img-top">
+                            <img src="./assets/img/card1.jpg" alt="img1" class="card-img-top">
                             <div class="card-body">
                                 <p class="card-text colorLetras">
                                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe veritatis dicta, quas
@@ -169,7 +169,7 @@
                     </div>
                     <div class="col-md-3 col-sm-12 my-3">
                         <div class="card fondoCard" style="width: 18rem;">
-                            <img src="assets/img/card2.jpg" alt="img1" class="card-img-top">
+                            <img src="./assets/img/card2.jpg" alt="img1" class="card-img-top">
                             <div class="card-body">
                                 <p class="card-text colorLetras">
                                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe veritatis dicta, quas
@@ -181,7 +181,7 @@
                     </div>
                     <div class="col-md-3 col-sm-12 my-3">
                         <div class="card fondoCard" style="width: 18rem;">
-                            <img src="assets/img/card3.jpg" alt="img1" class="card-img-top">
+                            <img src="./assets/img/card3.jpg" alt="img1" class="card-img-top">
                             <div class="card-body">
                                 <p class="card-text colorLetras">
                                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe veritatis dicta, quas
@@ -193,7 +193,7 @@
                     </div>
                     <div class="col-md-3 col-sm-12 my-3">
                         <div class="card fondoCard" style="width: 18rem;">
-                            <img src="assets/img/card4.jpg" alt="img1" class="card-img-top">
+                            <img src="./assets/img/card4.jpg" alt="img1" class="card-img-top">
                             <div class="card-body">
                                 <p class="card-text colorLetras">
                                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe veritatis dicta, quas
@@ -258,7 +258,7 @@
         integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 
     <!-- Mi archivo JS -->
-    <script src="assets/js/principal.js"></script>
+    <script src="./assets/js/principal.js"></script>
 </body>
 
 </html>
