Se agrega el atributo data-bs-ride para que el carousel sea automatico y se le proporciona una velocidad con el atributo data-bs-interval

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
     <!-- Header con carousel -->
     <header id="inicio">
-        <div id="carouselPrincipal" class="carousel slide">
+        <div id="carouselPrincipal" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselPrincipal" data-bs-slide-to="0" class="active"
                     aria-current="true" aria-label="Slide 1"></button>
