--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <a class="nav-link" href="#inicio">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#quienes">Quienes Somos</a>
+                        <a class="nav-link d-none d-md-block" href="#quienes">Quienes Somos</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#destacado">Destacados</a>
@@ -69,13 +69,13 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="./assets/img/carousel1.jpg" class="d-block w-100" alt="...">
+                    <img src="./assets/img/carousel1.jpg" class="d-block w-100 imagenCarousel" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="./assets/img/carousel2.jpg" class="d-block w-100" alt="...">
+                    <img src="./assets/img/carousel2.jpg" class="d-block w-100 imagenCarousel" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="./assets/img/carousel3.jpg" class="d-block w-100" alt="...">
+                    <img src="./assets/img/carousel3.jpg" class="d-block w-100 imagenCarousel" alt="...">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselPrincipal"
@@ -91,9 +91,9 @@
         </div>
     </header>
 
-    <main id="principal">
+    <main id="principal" class="pt-md-5 pt-0">
         <!-- ¿quienes somos? -->
-        <section id="quienes">
+        <section id="quienes" class="pt-md-5 pt-0">
             <div class="container d-none d-md-block">
                 <div class="py-5">
                     <h1 class="titulos text-center">¿quienes somos?</h1>
@@ -156,13 +156,13 @@
         </section>
 
         <!-- Destacados -->
-        <article id="destacado">
-            <div class="container">
+        <article id="destacado" class="pt-md-5 pt-0">
+            <div class="container pt-md-5 pt-0">
                 <div class="py-5">
                     <h1 class="titulos text-center">destacados</h1>
                 </div>
                 <div class="row">
-                    <div class="col-md-3 col-sm-12 my-3">
+                    <div class="col-md-3 col-sm-12 my-3 d-flex justify-content-center">
                         <div class="card fondoCard" style="width: 18rem;">
                             <img src="./assets/img/card1.jpg" alt="img1" class="card-img-top">
                             <div class="card-body">
@@ -174,7 +174,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-3 col-sm-12 my-3">
+                    <div class="col-md-3 col-sm-12 my-3 d-flex justify-content-center">
                         <div class="card fondoCard" style="width: 18rem;">
                             <img src="./assets/img/card2.jpg" alt="img1" class="card-img-top">
                             <div class="card-body">
@@ -186,7 +186,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-3 col-sm-12 my-3">
+                    <div class="col-md-3 col-sm-12 my-3 d-flex justify-content-center">
                         <div class="card fondoCard" style="width: 18rem;">
                             <img src="./assets/img/card3.jpg" alt="img1" class="card-img-top">
                             <div class="card-body">
@@ -198,7 +198,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-3 col-sm-12 my-3">
+                    <div class="col-md-3 col-sm-12 my-3 d-flex justify-content-center">
                         <div class="card fondoCard" style="width: 18rem;">
                             <img src="./assets/img/card4.jpg" alt="img1" class="card-img-top">
                             <div class="card-body">
@@ -219,7 +219,7 @@
             <div class="py-5">
                 <h1 class="titulos text-center">Contactanos</h1>
             </div>
-            <form action="">
+            <form action="" class="">
                 <div class="mb-3">
                     <label for="" class="form-label colorLetras">Nombre:</label>
                     <input type="text" class="form-control" id="txtNombre">
@@ -247,10 +247,10 @@
                 </div>
                 <div class="col-6 text-end">
                     <div>
-                        <a href="https://github.com"><i class="fa-brands fa-github mx-2"></i></a>
-                        <a href="https://www.linkedin.com"><i class="fa-brands fa-linkedin mx-2"></i></a>
-                        <a href="https://twitter.com"><i class="fa-brands fa-twitter mx-2"></i></a>
-                        <a href="https://web.facebook.com"><i class="fa-brands fa-facebook mx-2"></i></a>
+                        <a href="https://github.com" target="_blank"><i class="fa-brands fa-github mx-2"></i></a>
+                        <a href="https://www.linkedin.com" target="_blank"><i class="fa-brands fa-linkedin mx-2"></i></a>
+                        <a href="https://twitter.com" target="_blank"><i class="fa-brands fa-twitter mx-2"></i></a>
+                        <a href="https://web.facebook.com" target="_blank"><i class="fa-brands fa-facebook mx-2"></i></a>
                     </div>
                 </div>
             </div>
