--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
         </article>
 
         <!-- formulario -->
-        <div class="container pb-5" id="contacto">
+        <div class="container py-5" id="contacto">
             <div class="py-5">
                 <h1 class="titulos text-center">Contactanos</h1>
             </div>
