ultimas mejoras antes de hacer el merge con la rama main

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
             <div class="row py-5">
                 <div class="col-6">
                     <div>
-                        <p class="titulos m-0 fs-4">viajes Chile</p>
+                        <p id="tituloFinal" class="titulos m-0 fs-4">viajes Chile</p>
                     </div>
                 </div>
                 <div class="col-6 text-end">
